# kivy_root

./: .gitignore  README.rst  pyproject.toml
kivy_root/: main.py
