[tool.poetry]
name = "kivy-root"
version = "0.1.0"
description = ""
authors = ["Tyrn <a@b.com>"]
readme = "README.rst"
packages = [{include = "kivy_root"}]

[tool.poetry.dependencies]
python = "^3.10"
Kivy = "^2.1.0"
kivymd = { git = "https://github.com/kivymd/KivyMD.git" }

[tool.poetry.dev-dependencies]
pytest = "^7.1.0"
black = "^22.1.0"
pre-commit = "^2.17.0"
memory-profiler = "^0.60.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | bin
    | \.buildozer
    | \.gradle
  )/
)
'''

